--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -174,20 +174,21 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b><blockquote>➥ 𝐏ʟʏɪиɢ 𝐎η 𝐒ᴛʀєᴧϻɪηɢ  ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ ᴛɪᴛʟє ➥</b> <a href={0}>{1}</a> \n<b>❍ ᴛɪϻє ➥</b> {2} ϻɪηυᴛєs \n<b>❍ ʙʏ ➥</b> {3}<b></blockquote>\n<b><blockquote></b></blockquote>"
-stream_2 : "<b><blockquote>➥ 𝐏ʟʏɪиɢ 𝐎η 𝐒ᴛʀєᴧϻɪηɢ  ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ sᴛʀєᴧϻ ᴛʏᴘє ➥</b> ʟɪᴠєsᴛʀєᴧϻ [ υʀʟ ]\n<b>❍ ʙʏ ➥</b> {0}</blockquote>"
+stream_1 : "<b>❖ 𝐏ʟʏɪиɢ 𝐎η 𝐒ᴛʀєᴧϻɪηɢ ⏤͟͞●</b>\n\n<b>❍ 𝐓ɪᴛʟє ➥</b> <a href={0}>{1}</a> \n<b>❍ 𝐓ɪϻє ➥</b> {2} 𝐌ɪηυᴛєs \n<b>𝐏ℓαує∂ 𝐁у ➥</b> {3} \n\n<b></b>"
+stream_2 : "<b>❖ 𝐏ʟʏɪиɢ 𝐎η 𝐒ᴛʀєᴧϻɪηɢ ⏤͟͞●</b>\n\n<b>❍ sᴛʀєᴧϻ ᴛʏᴘє ➥</b> ʟɪᴠєsᴛʀєᴧϻ [ υʀʟ ]\n<b>❍ ʙʏ ➥</b> {0}"
+
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "ʙᴀᴄᴋ"
 
 S_B_1 : "✚ Aᴅᴅ Mᴇ ✚"
-S_B_2 : "📨 Sᴜᴘᴘᴏʀᴛ"
+S_B_2 : " Sᴜᴘᴘᴏʀᴛ"
 S_B_3 : "✚ Aᴅᴅ Mᴇ Tᴏ Yᴏᴜʀ Gʀᴏᴜᴘ ✚"
-S_B_4 : "🔎 Hᴏᴡ Tᴏ Usᴇ? Cᴏᴍᴍᴀɴᴅ Mᴇɴᴜ"
+S_B_4 : " Hᴏᴡ Tᴏ Usᴇ? Cᴏᴍᴍᴀɴᴅ Mᴇɴᴜ"
 S_B_5 : "👤 Oᴡɴᴇʀ"
-S_B_6 : "📨 Cʜᴀɴɴᴇʟ"
+S_B_6 : " Cʜᴀɴɴᴇʟ"
 S_B_7 : "Sᴏᴜʀᴄᴇ ᴄᴏᴅᴇ"
-S_B_8 : "👀 ʏᴏᴜᴛᴜʙᴇ 👀"
-S_B_9 : "📨 Sᴜᴩᴩᴏʀᴛ "
+S_B_8 : " ʏᴏᴜᴛᴜʙᴇ "
+S_B_9 : " Sᴜᴩᴩᴏʀᴛ "
 
 H_B_1 : "Aᴅᴍɪɴ"
 H_B_2 : "Aᴜᴛʜ"
